<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_item_title_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/default_item_actors_text"
        android:id="@+id/textViewActors"
        android:layout_marginTop="21dp"
     />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/default_item_director_text"
        android:id="@+id/textViewDirector"
     />

    <TextView
        android:id="@+id/textViewYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:text="@string/default_item_year_text"
        android:textSize="14sp"
     />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/default_item_genre_text"
        android:id="@+id/textViewGenre"
     />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/default_item_rating_text"
        android:id="@+id/textViewRating"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/default_item_language_text"
        android:id="@+id/textViewLanguage"
     />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/default_item_runtime_text"
        android:id="@+id/textViewRuntime"
     />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/default_item_tomatometer_text"
        android:id="@+id/textViewTomatoMeter"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/default_item_imdbrating_text"
        android:id="@+id/textViewImdbRating"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/default_item_plot_text"
        android:id="@+id/textViewPlot"
    />
</LinearLayout>