<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!-- -->
<!--<TextView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@drawable/tv_background_with_divider"-->
    <!--android:textAppearance="?android:attr/textAppearanceListItemSmall"-->
    <!--android:gravity="center_vertical"-->
    <!--android:paddingStart="?android:attr/listPreferredItemPaddingStart"-->
    <!--android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"-->
    <!--android:minHeight="?android:attr/listPreferredItemHeightSmall"-->
    <!--/>-->

            <TextView
            android:id="@+id/listTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/default_item_title_text"
            android:textSize="16sp"
            android:textStyle="bold"
                android:background="@drawable/tv_background_with_divider"
                />
            <TextView
            android:id="@+id/listYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:text="@string/default_item_year_text"
            android:textSize="14sp"
            android:layout_below="@+id/listTitle"
            android:layout_alignStart="@+id/listTitle"
                android:background="@drawable/tv_background_with_divider"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listItemType"
            android:textSize="14sp"
            android:text="@string/default_item_type_text"
            android:layout_alignTop="@+id/listYear"
            android:layout_toEndOf="@+id/listYear"
            android:paddingStart="5dp"
                android:background="@drawable/tv_background_with_divider"/>

    </RelativeLayout>